# BMP_filters

./: CMakeLists.txt  README.md  image_processor  image_processor.cpp
Command_line/: CommandLine.cpp  CommandLine.h  Help.cpp
Controller/: Controller.cpp  Controller.h
File_Interaction/: Reader.cpp  Reader.h  Writer.cpp  Writer.h
Filters/: Crop.cpp  Crop.h  Crystallize.cpp  Crystallize.h  EdgeDetection.cpp  EdgeDetection.h  FilterWithAffineMatrix.cpp  FilterWithAffineMatrix.h  FilterWithCoefficients.cpp  FilterWithCoefficients.h  FilterWithMatrix.cpp  FilterWithMatrix.h  Filters.h  GaussianBlur.cpp  GaussianBlur.h  Grayscale.cpp  Grayscale.h  Negative.cpp  Negative.h  Reflection.cpp  Reflection.h  Rotation.cpp  Rotation.h  Sharpening.cpp  Sharpening.h
Image/: Image.cpp  Image.h  ImageStructures.cpp  ImageStructures.h  Pixels.cpp  Pixels.h
Tests/: command_line_test.cpp  controller_test.cpp  filter_test.cpp  image_test.cpp  pixels_test.cpp  read_file_test.cpp
